Finished P2P connectivity